# OCLDAQ

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Pixie16/: CMakeLists.txt
Pixie16/include/: pixie16app_defs.h  pixie16app_export.h
Pixie16/src/: communication.c  pixie16app.c  pixie16sys_globals.h  utilities.c
PixieEngine/: .gitignore  CMakeLists.txt  README.md
PixieEngine/documentation/: CMakeLists.txt  Doxyfile
PixieEngine/documentation/pages/: about.dox
PixieEngine/include/: XIAControl.h  XIAParser.h
PixieEngine/src/: FirmwareMap.cpp  FirmwareMap.h  XIAControl.cpp  XIAModule.cpp  XIAModule.h  XIAParser.cpp  functions.cpp
PixieEngine/test/: CMakeLists.txt
PixieEngine/test/source/: main.cpp
XIAConfigurator/: CMakeLists.txt
XIAConfigurator/include/XIAConfigurator/: xiaconfigurator.h
XIAConfigurator/src/XIAConfigurator/: BaselineFilterWidget.h  CFDFilterWidget.cpp  CFDFilterWidget.h  ChannelRegisterTab.h  CopySettingsTab.cpp  CopySettingsTab.h  EnergyFilterWidget.cpp  ModuleRegisterTab.cpp  ModuleRegisterTab.h  QDCFilterWidget.cpp  QDCFilterWidget.h  TimingFilterTab.cpp  TimingSettingsWidget.cpp  TimingSettingsWidget.h  helpers.cpp  helpers.h  xiaconfigurator.cpp  xiainterface.cpp
XIAengine/: CMakeLists.txt  Readout.cpp  raw_readout.cpp
XIAengine/include/: xiainterface.h
XIAengine/include/Pixie16/: pixie16app_common.h  pixie16app_defs.h
XIAengine/src/: XIAControl.cpp  XIAControl.h  engine.cpp  functions.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
XIAengine/src/Pixie16/: pixie16app_globals.c  pixie16app_globals.h  pixie16sys.c  pixie16sys_globals.c  tools.c
XIAengine/src/XIAConfigurator/: BaselineFilterWidget.cpp  CFDFilterWidget.cpp  ChannelRegisterTab.cpp  CopySettingsTab.cpp  CopySettingsTab.h  EnergyFilterWidget.cpp  EnergyFilterWidget.h  QDCFilterWidget.cpp  TimingFilterTab.h  TimingSettingsWidget.cpp  TriggerFilterWidget.cpp  TriggerFilterWidget.h  enumerate.h  helpers.h  xiaconfigurator.cpp  xiaconfigurator.h  xiainterface.cpp
XIAengine/src/engine/: XIAControl.cpp  XIAControl.h  engine.cpp  functions.cpp  functions.h  xiainterface.cpp  xiainterface2.cpp  xiainterface2.h
XIAonline/: CMakeLists.txt
XIAonline/include/XIAReader/: ConfigManager.h  DetectorTypes.h  entry.h  event.h
XIAonline/include/XIAReader/Configuration/: ConfigManager.h  DetectorTypes.h  SortTypes.h  UserConfiguration.h
XIAonline/include/XIAReader/Format/: XIA_CFD.h  (+3 more)
XIAonline/src/: Calib.cpp  Event_builder.cpp  Event_builder.h  MemoryMap.cpp  Sort_Funct.cpp  Sort_Funct.h  Unpacker.cpp  Unpacker.h  XIA_CFD.cpp  experimentsetup.c  experimentsetup.h  main.cpp  publisher.h  serializer.hpp
XIAonline/src/XIAReader/: ConfigManager.cpp  Unpacker.cpp  XIA_CFD.cpp  event.cpp
XIAonline/test_reader/: MemoryMap.cpp  MemoryMap.h  reader.cpp
XIAreadout/: CMakeLists.txt  Readout.cpp  functions.h
all/: CMakeLists.txt
daq_system/: CMakeLists.txt
daq_system/src/master/: net_client.cpp
master/: CMakeLists.txt
master/src/: acq_gui.cpp  io_xtapp.cpp  io_xtapp.h  net_client.h
nscope/booter/: Asserts.h  Makefile  Makefile.am  SystemBooter.cpp  SystemBooter.h  SystemBooterTest.cpp  TestRunner.cpp  boot.cpp
nscope/configuration/: Asserts.h  Configuration.cpp  Configuration.h  ConfigurationParser.cpp  ConfigurationParser.h  ConfigurationParserTest.cpp  ConfigurationTest.cpp  FirmwareVersionFileParser.cpp  FirmwareVersionFileParser.h  FirmwareVersionFileParserTest.cpp  HardwareRegistry.cpp  HardwareRegistry.h  HardwareRegistryTests.cpp  Makefile  Makefile.am  ModEvtFileParser.cpp  ModEvtFileParser.h  ModEvtLenFileParserTest.cpp  TestRunner.cpp
plx/: CMakeLists.txt
plx/include/: PciTypes.h
pyupdate/: CMakeLists.txt
rserver/: CMakeLists.txt  ROOTServer.cpp  ROOTServer.h  options.h  rserver.cpp
rupdate/: CMakeLists.txt
rupdate/include/: io_root.h
rupdate/src/: rupdate.cpp
sirius/: CMakeLists.txt  Makefile  buildit.sh  cleanit.sh  makefile-head  makefile-tail  reload_acq.sh  start_sirius
sirius/include/: buffer_defs.h  engine_shm.h  ipc_defs.h  sort_spectra.h  spec_defs.h
sirius/src/: Makefile  engine_shm.cpp  net_control.cpp  sort_spectra.cpp  utilities.cpp
sirius/src/XIAengine/: DataMerger.cpp  DataMerger.h  Makefile  XIAControl.cpp  XIAControl.h  XIAengine.pro  XIAreader.cpp  XIAreader.h  defines.h  engine.cpp  event_container.h  globals.h  main.cpp
sirius/src/XIAengineControl/: Functions.h  XIAControl.cpp  XIAControl.h  XIAengineControl.pro  engine.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pixie16app.c
sirius/src/XIAonline/: Event.h  Event_builder.cpp  Event_builder.h  Histogram1D.cpp  Histogram1D.h  Histogram2D.cpp  Histogram2D.h  Histogram3D.cpp  Histograms.h  MakeExperimetSetup.py  Makefile  Parameters.h  Sort_Funct.cpp  Unpacker.cpp  Unpacker.h  XIARoutine.cpp  XIA_CFD.cpp  XIA_CFD.h  XIAonline.pro  XIAsort  auto_setup.c  experimentsetup.c  experimentsetup.h  main.cpp  spectrum_rw.h
sirius/src/engine/: CAENVMElib.h  CAENVMEtypes.h  Makefile  engine.cpp  sbs_usb_comm.cpp  sbs_usb_comm.h  usb_vme.cpp
sirius/src/lib/: .depend-net_control.dep  .depend-run_command.dep  Makefile  engine_shm.cpp  run_command.cpp  sort_spectra.cpp
sirius/src/master/: Makefile  acq_clear.cpp  acq_gui.cpp  acq_gui.h  acq_master_commands.txt  acq_reload.cpp  m_control.h  m_engine.cpp  m_engine.h  m_sort.cpp  m_sort.h
sirius/src/rupdate/: .depend-io_root.dep  .depend-rupdate.dep  Makefile  io_root.cpp  rupdate.cpp  rupdate.h
sirius/src/sort/: .depend-acq_clear.dep  .depend-sort_calib.dep  .depend-sort_format.dep  .depend-sort_main.dep  .depend-sort_offline.dep  .depend-spectrum_rw.dep  .depend-user_routine_basic.dep  .depend-userutil.dep  Makefile  acq_clear.cpp  gsdims.h  sort_calib.h  sort_event.cpp  sort_event.h  sort_format_old.c  sort_formatold.cpp  sort_formatold.h  sort_main.cpp  sort_offline.cpp  user_routine.cpp  user_routine.h  user_routine_all.cpp  user_routine_basic.cpp  user_routine_basic.h  user_routine_root.cpp  user_routine_simple.cpp  userutil.cpp
sirius/src/user_sort/: Makefile  loadsort  user_routine_root.cpp  userroot.h
(+272 files in other folders)
